semigroup_derive/tests/snapshots/properties_annotated.snap
---
source: semigroup_derive/src/properties.rs
assertion_line: 77
expression: formatted
---
/// A semigroup construction that returns the first non-`None` value.
/// # Properties
/// <!-- properties start -->
///| [`semigroup::Annotate`] | [`semigroup::Monoid`] | [`semigroup::Commutative`] |
///|-------------------------|-----------------------|----------------------------|
///|            ✅           |           ✅          |             ❌             |
///<!-- properties end -->
pub struct Coalesce<T>(pub Option<T>);
