semigroup_derive/tests/snapshots/properties_not_annotated.snap
---
source: semigroup_derive/src/properties.rs
assertion_line: 77
expression: formatted
---
/// A semigroup struct that returns the sum and overwrite
/// # Properties
/// <!-- properties start -->
///| [`crate::Annotate`] | [`crate::Monoid`] | [`crate::Commutative`] |
///|---------------------|-------------------|------------------------|
///|          ❌         |         ❌        |           ❌           |
///<!-- properties end -->
pub struct UnnamedStruct<T: std::ops::Add>(
    #[semigroup(with = "semigroup::op::Added")]
    T,
    u64,
);
