semigroup_derive/tests/snapshots/properties_where.snap
---
source: semigroup_derive/src/properties.rs
assertion_line: 94
expression: formatted
---
/// A semigroup construction that returns the sum.
/// # Properties
/// <!-- properties start -->
///|       | [`crate::Annotate`] | [`crate::Monoid`] | [`crate::Commutative`] |
///|-------|---------------------|-------------------|------------------------|
///|  impl |          ❌         |         ✅        |           ✅           |
///| where |                     |   `T: num::Zero`  |                        |
///<!-- properties end -->
pub struct Sum<T: Add<Output = T>>(pub T);
