semigroup_derive/tests/snapshots/semigroup_monoid.snap
---
source: semigroup_derive/src/semigroup.rs
assertion_line: 89
expression: formatted
---
#[automatically_derived]
impl ::semigroup::Semigroup for MonoidStruct {
    fn op(base: Self, other: Self) -> Self {
        Self {
            sum: <semigroup::op::semigroup::sum::Sum<
                _,
            > as ::semigroup::Construction<_>>::lift_op(base.sum, other.sum),
        }
    }
}
#[automatically_derived]
impl ::semigroup::Monoid for MonoidStruct {
    fn unit() -> Self {
        Self {
            sum: <semigroup::op::semigroup::sum::Sum<
                _,
            > as ::semigroup::ConstructionMonoid<_>>::lift_unit(),
        }
    }
}
#[automatically_derived]
impl ::semigroup::Commutative for MonoidStruct {}
