semigroup_derive/tests/snapshots/semigroup_not_annotated.snap
---
source: semigroup_derive/src/semigroup.rs
assertion_line: 77
expression: formatted
---
#[automatically_derived]
impl<T: std::ops::Add> Semigroup for UnnamedStruct<T> {
    fn op(base: Self, other: Self) -> Self {
        Self {
            0: <semigroup::op::semigroup::add::Added<
                _,
            > as Construction<_>>::lift_op(base.0, other.0),
            1: <semigroup::op::annotation::overwrite::Overwrite<
                _,
            > as Construction<_>>::lift_op(base.1, other.1),
        }
    }
}
